2010-05-13  James Youngman  <jay@gnu.org>

	Avoid issuing warnings for things in system headers.
	* configure.ac: Disable warnigns for system headers.

	Fix some commpiler warnings.
	* bodyio.h (decode_line): return size_t, not int, for a length.
	(encode_line): take a size_t parameter, not int, for a length.
	* encoding.cc (decode_line): Use a size_t value for offsets in the
	buffer.
	* bodyio.cc (body_insert_text): Add casts where we know
	conversions are safe to avoid compiler warnings.
	(copy_data): Mark as a static function.

2010-05-12  James Youngman  <jay@gnu.org>

	Remove unused file list.cc.
	* Makefile.am (EXTRA_DIST): Remove list.cc, since it is unused.
	* list.cc: Delete.

	Prune obsolete items in docs/TODO.
	* docs/TODO: Tests for sact and val exist.  Remove that TODO item.

	Some TODO housekeeping.
	* sf-prs.cc (print_delta): Explain more clearly what get do for
	:BD: in prs if we fail to seek to the body.
	* sccsfile.h (s): Add TODO comment suggesting we use something
	more efficient than mylist<string> for authoried users.
	(sccs_file::admin): Likewise for set_flags and unset_flags
	parameters to this method.

	Remove mylist_delta_list; use more appropriate types for
	loop/length variables.
	* delta-table.h (mylist_delta_list::build_seq_table): Use more
	appropriate (i.e. matching) types for loop variables.
	Get rid of mylist_delta_list and abstract_delta_list.
	* delta-table.cc (delta_at_seq_exists): There is no need for a
	const qualifier for a bool return type; remove it.
	(next_seqno): Just increment the result rather than adding an
	unsigned int, as this simplifies the type combination.
	* sf-get.cc (prepare_seqstate_1): Use size_type types for indexes and
	length variables.

	Use mylist<T>::size_type instead of int.
	* mylist.h (mylist): Introduce size_type, and use it in method
	parameters.
	* rl-merge.cc (merge): Use mylist<release>::size_type.

	Avoid a 'local variable shadows class member' warning.